--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://ruizrodriguezdiego45:<Dani8223>@cluster0.jcedz.mongodb.net/Bakend_Ecommerce?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://ruizrodriguezdiego45:<Dani8223>@cluster0.jcedz.mongodb.net/BAKEND_ECOMMERCEDB?retryWrites=true&w=majority
 
 
 PORT=5000
